syntax = "proto3";
package g2u;

service Gateway2User {
	rpc Hello(HelloRequest) returns (HelloResponse) {}
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
	rpc Login(LoginRequest) returns (LoginResponse) {}
	rpc ForgetPwd(ForgetRequest) returns (ForgetResponse) {}
	rpc AuthSecurity(SecurityRequest) returns (SecurityResponse) {}
    rpc NoticeList(NoticeListRequest) returns (NoticeListResponse) {}
	rpc NoticeDetail(NoticeDetailRequest) returns (NoticeDetailResponse) {}

}

message CommonErrResponse{
    int32 err       =1;
    string message  =2;
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string greeting = 2;
}

message RegisterRequest {
    string phone=1;
    string pwd=2;
    string invite_code=4;
    int32  country=5;
}

message RegisterResponse {
	int32 err = 1;
}

message LoginRequest {
    string phone =1;
    string pwd=2;
}

message LoginResponse {
	int32 err = 1;
}

message ForgetRequest {
    string phone    =1;
}

message ForgetResponse {
    int32 err       =1;
    string message  =2;
    string phone    =3;
    string email    =4;
}

message SecurityRequest {
    string phone            =1;
    string phone_auth_code  =2;
    string email_auth_code  =3;
}

message SecurityResponse{
    int32 err               =1;
    string message          =2;
    bytes security_key     =3;
}

message NoticeListRequest{
	int32 NoticeType=1;
	int32 StartRow=2;
	int32 EndRow=3; 
}

message NoticeListResponse{ 
	message Notice{
		int32 id 				=1;
		string title 			=2;
		string Description 		=3;
		string createDateTime 	=4; 
	} 
	repeated Notice  notice =1;
	int32 err               =2;
    string message          =3;
}

message NoticeDetailRequest{
	int32 id =1;
}

message NoticeDetailResponse{
	int32 err               =1;
    string message          =2;
	int32 id 				=3;
	string title			=4;
	string description		=5;       
	string content 			=6;
	bytes  covers			=7;
	bytes content_images	=8;
	int32 type				=9;
	string type_name		=10;
	string author			=11;
	int32 weight			=12;
	int32 shares			=13;
	int32 hits				=14;
	int32 comments			=15;
	bool DisplayMark		=16;
	string create_time		=17;
	string update_time		=18;    
	int32 adminId 			=19;
	string admin_nickname	=20;     
}


